# wasm-examples-rs

./: Cargo.toml  play.sh
.cargo/: config.toml
commands/hello-world/: Cargo.toml  Makefile  README.md
commands/wasi-cli-run/: Cargo.toml  README.md
commands/wasi-cli-run/src/: main.rs
component-model-built-with-wit-bindgen/backtrace-quickstart/: README.md
component-model-built-with-wit-bindgen/backtrace-quickstart/app/wit/: world.wit
component-model-built-with-wit-bindgen/backtrace-quickstart/cli/src/: main.rs
component-model-built-with-wit-bindgen/composed-cli/: README.md
component-model-built-with-wit-bindgen/composed-cli/cli/src/: main.rs
component-model-built-with-wit-bindgen/composed-cli/guest/: Cargo.toml
component-model-built-with-wit-bindgen/composed-cli/guest/src/: lib.rs
component-model-built-with-wit-bindgen/composed-cli/guest/wit/: world.wit
component-model-built-with-wit-bindgen/host-resource/: Makefile
component-model-built-with-wit-bindgen/host-resource-with-method-added/: Makefile
component-model-built-with-wit-bindgen/host-resource-with-method-added/app-v2/: Cargo.toml
component-model-built-with-wit-bindgen/host-resource-with-method-added/app-v2/.cargo/: config.toml
component-model-built-with-wit-bindgen/host-resource-with-method-added/app-v2/src/: lib.rs
component-model-built-with-wit-bindgen/host-resource-with-method-added/app-v2/wit/: world.wit
component-model-built-with-wit-bindgen/host-resource-with-method-added/cli/: Cargo.toml  README.md
component-model-built-with-wit-bindgen/host-resource-with-method-added/cli/src/: main.rs
docker/: Dockerfile  dockerize.sh
reactors/: .gitignore  README.md
reactors-built-with-wat/hello-world/: Makefile  README.md  guest.wat
reactors-built-with-wat/hello-world/host/: Cargo.toml
reactors-built-with-wat/hello-world/host/src/: main.rs
reactors/backtrace-quickstart/: Makefile
reactors/backtrace-quickstart/app/: Cargo.toml
reactors/backtrace-quickstart/app/src/: lib.rs
reactors/backtrace-quickstart/cli/: Cargo.toml  README.md
reactors/compose/: Makefile  README.md
reactors/compose-same-pkg-with-different-versions/: .gitignore  Makefile  README.md
reactors/compose-same-pkg-with-different-versions/adder/: Cargo.toml
reactors/compose-same-pkg-with-different-versions/adder-v2/: Cargo.toml
reactors/compose-same-pkg-with-different-versions/adder-v2/src/: lib.rs
reactors/compose-same-pkg-with-different-versions/adder-v2/wit/: world.wit
reactors/compose-same-pkg-with-different-versions/adder/src/: lib.rs
reactors/compose-same-pkg-with-different-versions/cli/: Cargo.toml
reactors/compose-same-pkg-with-different-versions/cli/src/: main.rs
reactors/compose-same-pkg-with-different-versions/cli/wit/: world.wit
reactors/compose/adder/: Cargo.toml
reactors/compose/adder/src/: lib.rs
reactors/compose/calculator/: Cargo.toml
reactors/compose/calculator/src/: lib.rs
reactors/compose/calculator/wit/: world.wit
reactors/compose/cli/: Cargo.toml
reactors/compose/cli/src/: main.rs
reactors/compose/cli/wit/: world.wit
reactors/composed-cli/: Makefile
reactors/composed-cli/cli/: Cargo.toml
reactors/decompose/: Makefile  README.md
reactors/decompose/app/: Cargo.toml
reactors/decompose/app/src/: lib.rs
reactors/decompose/app/wit/: world.wit
reactors/decompose/cli/: Cargo.toml
reactors/decompose/cli/src/: main.rs
reactors/dynamically-parse-and-inject/: Makefile  README.md
reactors/dynamically-parse-and-inject/app/: Cargo.toml
reactors/dynamically-parse-and-inject/app/src/: lib.rs
reactors/dynamically-parse-and-inject/app/wit/: world.wit
reactors/dynamically-parse-and-inject/cli/: Cargo.toml
reactors/dynamically-parse-and-inject/cli/src/: main.rs
reactors/guest-resource/: Makefile
reactors/guest-resource/app/: Cargo.toml
reactors/guest-resource/app/.cargo/: config.toml
reactors/guest-resource/app/src/: lib.rs
reactors/guest-resource/app/wit/: world.wit
reactors/guest-resource/cli/: Cargo.toml
reactors/guest-resource/cli/src/: main.rs
reactors/host-resource/: README.md
reactors/host-resource-with-method-added/: README.md
reactors/host-resource-with-method-added/app-v1/: Cargo.toml
reactors/host-resource/app/: Cargo.toml
reactors/host-resource/app/src/: lib.rs
reactors/host-resource/cli/: Cargo.toml
reactors/host-resource/cli/src/: main.rs
reactors/wasm32-wasip2-hello-world/: Makefile  README.md
reactors/wasm32-wasip2-hello-world/guest/: Cargo.toml
reactors/wasm32-wasip2-hello-world/guest/src/: lib.rs
reactors/wasm32-wasip2-hello-world/guest/wit/: world.wit
reactors/wasm32-wasip2-hello-world/host/: Cargo.toml
reactors/wasm32-wasip2-hello-world/host/src/: main.rs
