[workspace]
members = [
  "module/abi/cli",
  "module/abi/wasm",
  "module/custom-section",
  "module/quickstart/cli",
  "module/quickstart/wasm",
  "component-model-built-with-cargo-component/hello-world/cli",
  "component-model-built-with-cargo-component/hello-world/component",
  "component-model-built-with-cargo-component/hello-world/component-by-wit-bindgen",
  "component-model-built-with-cargo-component/imports/cli",
  "component-model-built-with-cargo-component/imports/component1",
  "component-model-built-with-cargo-component/imports/component2",
  "component-model-built-with-cargo-component/dynamically-built-instance/cli",
  "component-model-built-with-cargo-component/dynamically-built-instance/component",
  "component-model-built-with-cargo-component/compose/adder",
  "component-model-built-with-cargo-component/compose/calculator",
  "component-model-built-with-cargo-component/compose/cli",
  "component-model-built-with-cargo-component/wit-record/cli",
  "component-model-built-with-cargo-component/wit-record/component",
  "component-model-built-with-cargo-component/wit-resource/cli",
  "component-model-built-with-cargo-component/wit-resource/component",
  "component-model-built-with-wat/hello-world/host",
  "component-model-built-with-wit-bindgen/compose/adder",
  "component-model-built-with-wit-bindgen/compose/calculator",
  "component-model-built-with-wit-bindgen/compose/cli",
  "component-model-built-with-wit-bindgen/compose-same-pkg-with-different-versions/adder",
  "component-model-built-with-wit-bindgen/compose-same-pkg-with-different-versions/adder-v2",
  "component-model-built-with-wit-bindgen/compose-same-pkg-with-different-versions/cli",
  "component-model-built-with-wit-bindgen/decompose/app",
  "component-model-built-with-wit-bindgen/decompose/cli",
  "component-model-built-with-wit-bindgen/dynamically-parse-and-inject/app",
  "component-model-built-with-wit-bindgen/dynamically-parse-and-inject/cli",
  "component-model-built-with-wit-bindgen/guest-resource/app",
  "component-model-built-with-wit-bindgen/guest-resource/cli",
  "component-model-built-with-wit-bindgen/host-resource/app",
  "component-model-built-with-wit-bindgen/host-resource/cli",
  "component-model-built-with-wit-bindgen/wasm32-wasip2-hello-world/guest",
  "component-model-built-with-wit-bindgen/wasm32-wasip2-hello-world/host",
  "component-model-built-with-wit-bindgen/composed-cli/cli",
  "component-model-built-with-wit-bindgen/composed-cli/guest",
  "component-model-built-with-wit-bindgen/host-resource-with-method-added/app-v1",
  "component-model-built-with-wit-bindgen/host-resource-with-method-added/app-v2",
  "component-model-built-with-wit-bindgen/host-resource-with-method-added/cli",
  "component-model-built-with-wit-bindgen/backtrace-quickstart/app",
  "component-model-built-with-wit-bindgen/backtrace-quickstart/cli",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
wasm-bindgen = "0.2.92"
wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"
wit-bindgen = "0.49.0"

[workspace.dependencies.async-std]
features = ["attributes"]
version = "1.12.0"

[workspace.dependencies.clap]
features = ["derive"]
version = "4.5.4"

[workspace.dependencies.tokio]
features = ["full"]
version = "1.48"

[workspace.dependencies.wit-bindgen-rt]
features = ["bitflags"]
version = "0.44.0"
