[workspace]
members = [
  "module/abi/cli",
  "module/abi/wasm",
  "module/custom-section",
  "module/quickstart/cli",
  "module/quickstart/wasm",
  "commands/hello-world",
  "reactors-built-with-wat/hello-world/host",
  "reactors/compose/adder",
  "reactors/compose/calculator",
  "reactors/compose/cli",
  "reactors/compose-same-pkg-with-different-versions/adder",
  "reactors/compose-same-pkg-with-different-versions/adder-v2",
  "reactors/compose-same-pkg-with-different-versions/cli",
  "reactors/decompose/app",
  "reactors/decompose/cli",
  "reactors/dynamically-parse-and-inject/app",
  "reactors/dynamically-parse-and-inject/cli",
  "reactors/guest-resource/app",
  "reactors/guest-resource/cli",
  "reactors/host-resource/app",
  "reactors/host-resource/cli",
  "reactors/wasm32-wasip2-hello-world/guest",
  "reactors/wasm32-wasip2-hello-world/host",
  "reactors/composed-cli/cli",
  "reactors/composed-cli/guest",
  "reactors/host-resource-with-method-added/app-v1",
  "reactors/host-resource-with-method-added/app-v2",
  "reactors/host-resource-with-method-added/cli",
  "reactors/backtrace-quickstart/app",
  "reactors/backtrace-quickstart/cli", "commands/hello-world",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
wasm-bindgen = "0.2.92"
wasmtime = "41.0"
wasmtime-wasi = "41.0"
wit-bindgen = "0.51.0"

[workspace.dependencies.async-std]
features = ["attributes"]
version = "1.12.0"

[workspace.dependencies.clap]
features = ["derive"]
version = "4.5.4"

[workspace.dependencies.tokio]
features = ["full"]
version = "1.48"

[workspace.dependencies.wit-bindgen-rt]
features = ["bitflags"]
version = "0.44.0"
