[package]
name = "wasm32-wasip2-hello-world-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
